--- a/frontEnd/Index.html
+++ b/frontEnd/Index.html
@@ -1,6 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158597577-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-158597577-1');
+    </script>
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,9 +38,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="Index">Inicio</a></li>
-                        <li><a href="About">Acerca de</a></li>
-                        <li><a href="Contact">Contacto</a></li>
+                        <li><a href="Index.html">Inicio</a></li>
+                        <li><a href="About.html">Acerca de</a></li>
+                        <li><a href="Contact.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,7 +103,7 @@ Nos enfocamos en que nuestros  clientes tengan  los productos mas accesibles
                         <p>&copy; 2020 -      ContinumLabs</p>
                     </footer>
                 </div>
-
+</div>>
         <script src="Scripts/jquery-3.3.1.js"></script>
 
         <script src="Scripts/bootstrap.js"></script>
